--- a/actividad23.html
+++ b/actividad23.html
@@ -39,7 +39,7 @@
          Edison "bailen".
       </p>
       <h2>Información Adicional: Cómo Funcionan los Mensajes y el Evento de Inicio</h2>
-      <h1>&emsp; Mensajes</h1>
+      <h3>Mensajes</h3>
       <p class="texto">
          Los robots Edison pueden enviarse y recibir mensajes infrarrojos entre sí. 
          <br><br>
@@ -57,7 +57,7 @@
          Esto activará el segundo robot para comenzar o continúe su programa desde el bloque de mensajes en el 
          programa del segundo robot.
       </p>
-      <h1>&emsp; Iniciar eventos</h1>
+      <h3>Iniciar eventos</h3>
       <p class="texto">
          Los bloques 'iniciar eventos' permiten al usuario hacer que un subprograma comience a partir de un evento 
          específico mientras se ejecuta el programa principal. 
