--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
    <div id="cabecera">
-      <h1>Edison</h1>
+      <h1>Scratch</h1>
    </div>
    <!-- INICIO_LOADER -->
    <div id="pageloader">
@@ -20,33 +20,14 @@
    </div>
    <!-- FIN_LOADER -->
    <div id="contenido">
-      <h2>Índice de contenidos</h2>
+      <br>
+      <h2>Índice De Contenidos</h2>
       <ul>
-         <li><a href="guia.html">&emsp;Guía de Bloques EdBlocks</a></li>
-         <li><a>&emsp;-----------------------------------------------------------</a></li>
-         <li><a href="actividad1.html">&emsp;Actividad 1: Conoce a Edison</a></li>
-         <li><a href="actividad2.html">&emsp;Actividad 2: Conducción Controlada por Aplausos</a></li>
-         <li><a href="actividad3.html">&emsp;Actividad 3: Evitar Obstáculos</a></li>
-         <li><a href="actividad4.html">&emsp;Actividad 4: Sigue una Antorcha</a></li>
-         <li><a href="actividad5.html">&emsp;Actividad 5: Seguimiento de Líneas</a></li>
-         <li><a href="actividad6.html">&emsp;Actividad 6: Rebotar en las Fronteras</a></li>
-         <li><a href="actividad7.html">&emsp;Actividad 7: Lucha de Sumo</a></li>
-         <li><a href="actividad8.html">&emsp;Actividad 8: Bienvenido a EdBlocks</a></li>
-         <li><a href="actividad9.html">&emsp;Actividad 9: Descarguemos un Programa</a></li>
-         <li><a href="actividad10.html">&emsp;Actividad 10: Conduzcamos</a></li>
-         <li><a href="actividad11.html">&emsp;Actividad 11: Volvamos</a></li>
-         <li><a href="actividad12.html">&emsp;Actividad 12: Probemos con un Laberinto</a></li>
-         <li><a href="actividad13.html">&emsp;Actividad 13: Sigamos una Línea</a></li>
-         <li><a href="actividad14.html">&emsp;Actividad 14: Detengámonos en una Línea Negra</a></li>
-         <li><a href="actividad15.html">&emsp;Actividad 15: Hagamos Ruido</a></li>
-         <li><a href="actividad16.html">&emsp;Actividad 16: Usemos las Luces</a></li>
-         <li><a href="actividad17.html">&emsp;Actividad 17: Detectemos Obstáculos</a></li>
-         <li><a href="actividad18.html">&emsp;Actividad 18: Detectemos y Evitemos</a></li>
-         <li><a href="actividad19.html">&emsp;Actividad 19: Quedémonos en las Fronteras</a></li>
-         <li><a href="actividad20.html">&emsp;Actividad 20: Hagamos Música</a></li>
-         <li><a href="actividad21.html">&emsp;Actividad 21: Actuemos</a></li>
-         <li><a href="actividad22.html">&emsp;Actividad 22: Evitemos la Luz</a></li>
-         <li><a href="actividad23.html">&emsp;Actividad 23: Hagamos una Fiesta de Baile</a></li>
+         <li><a> &emsp;Introducción a Scratch</a></li> <!--  href="introduccion.html"> -->
+         <br>
+         <li><a href="indexiniciales.html">&emsp;Juegos Iniciales</a></li>
+         <li><a>&emsp;Juegos Intermedios</a></li> <!-- href="indexintermedios.html"> -->
+         <li><a>&emsp;Juegos Finales</a></li> <!-- href="indexfinales.html"> -->
       </ul>
    </div>
    <div id="pie">
